[tool.poetry]
name = "atlmonit"
version = "0.1.0"
description = ""
authors = ["Francisco Santos <xikaovs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
